added basic js and html timers

--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
     <title>
         Rushed for Thyme
     </title>
+    <script src="./timer_one.js"></script>
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
 
-    <h1>Rushed for Thyme - A Cooking Helper</h1><br>
-    <h2>Timer:</h2>
+    <h1>Rushed-for-Thyme:<br>
+        A Cooking Helper
+    </h1>
+
+    <!-- Basic Timer 1 -->
+
+    <div id="basicUsage">00:00:00</div>
+
+    <!-- <div id="chronoExample">
+            <div class="values">00:00:00</div>
+            <div>
+                <button class="startButton">Start</button>
+                <button class="pauseButton" >Pause</button>
+                <button class="stopButton">Stop</button>
+                <button class="resetButton">Reset</button>
+            </div>
+        </div> -->
+
+
 
 </body>
-
 
 </html>
