added working countdown timer, needs a start and pause button

--- a/index.html
+++ b/index.html
@@ -2,35 +2,24 @@
 <html>
 
 <head>
-    <title>
-        Rushed for Thyme
-    </title>
-    <script src="./timer_one.js"></script>
-    <link rel="stylesheet" href="./main.css">
+    <script type="text/javascript" src="./timer_one.js"></script>
+    <script type="text/javascript" src="./timer_two.js"></script>
+    <!-- <link rel="stylesheet" href="./main.css"> -->
 </head>
 
 <body>
 
-    <h1>Rushed-for-Thyme:<br>
-        A Cooking Helper
+    <title>
+        Rushed for Thyme
+    </title>
+
+    <h1>Rushed-for-Thyme: A Cooking Helper
     </h1>
 
-    <!-- Basic Timer 1 -->
-
-    <div id="basicUsage">00:00:00</div>
-
-    <!-- <div id="chronoExample">
-            <div class="values">00:00:00</div>
-            <div>
-                <button class="startButton">Start</button>
-                <button class="pauseButton" >Pause</button>
-                <button class="stopButton">Stop</button>
-                <button class="resetButton">Reset</button>
-            </div>
-        </div> -->
-
-
+    <div id="timerAndCountdown">
+        <input type="button" name="startTimer" value="Start Timer">
+        Timer countdown: <span id="time">20:00</span>
+    </div>
 
 </body>
-
 </html>
