created 2 timers, one automatic and one with button pushing ability

--- a/Timer-2/index2.html
+++ b/Timer-2/index2.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="./timer_one.js"></script>
     <script type="text/javascript" src="./timer_two.js"></script>
     <!-- <link rel="stylesheet" href="./main.css"> -->
 </head>
@@ -10,14 +9,14 @@
 <body>
 
     <title>
-        Rushed for Thyme
+        Rushed for Thyme - Timer 1
     </title>
 
     <h1>Rushed-for-Thyme: A Cooking Helper
     </h1>
 
     <div id="timerAndCountdown">
-        <input type="button" name="startTimer" value="Start Timer">
+        <input type="button" id="startClock" value="Start Timer">
         Timer countdown: <span id="time">20:00</span>
     </div>
 
