2 timers made, need 1 more timer with a start button that only goes to 20 minutes

--- a/Timer-3/index3.html
+++ b/Timer-3/index3.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="./timer_three.js"></script>
-    <!-- <link rel="stylesheet" href="./main.css"> -->
+    <script src="./timer_three.js"></script>
 </head>
 
 <body>
@@ -14,6 +13,7 @@
 
     <h1>Rushed-for-Thyme: A Cooking Helper
     </h1>
+
 
 
 </body>
