added changes to timer 2, added functions to change text in html with javascript

--- a/Timer-2/index2.html
+++ b/Timer-2/index2.html
@@ -24,8 +24,16 @@
     
     <div id="instructions">
         <p>Here's what you have to do:</p>
+
+        <p id="changingInstructions">
+            Heyyyyy
+        </p>
         <!-- Instructions go here-->
+
     </div>
+
+    <h1 id="id01">This is an OLD HEADING.</h1>
+
 
 </body>
 </html>
