main branch, deleted and moved timer files

--- a/timer/timer.html
+++ b/timer/timer.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <script type="text/javascript" src="./timer_two.js"></script>
+    <script type="text/javascript" src="./timer.js"></script>
     <!-- <link rel="stylesheet" href="./main.css"> -->
 </head>
 
