--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
 
 // Link to the thing
 
-<a href="./index2.html">Start the timer.</a>
+<a href="./timer/timer.html">Start the timer.</a>
 
 </body>
 </html>
