changed basic HTML, added new features, timer still works, I think we actually have something good here

--- a/timer/timer.html
+++ b/timer/timer.html
@@ -6,34 +6,34 @@
     <!-- <link rel="stylesheet" href="./main.css"> -->
 </head>
 
-<body>
-
     <title>
         Rushed for Thyme - Countdown Timer
     </title>
+
+
+<body>
 
     <h1>Rushed-for-Thyme: A Cooking Helper
     </h1>
 
     <div id="startTimerButton">
-        <p>How much time do you have left?</p>
+
+        <h3>How much time do you have left?</h3>
         <span id="time">20:00</span>
+
     </div>
 
     <br>
     
     <div id="instructions">
-        <p>Here's what you have to do:</p>
+
+        <h4>Here's what you have to do:</h4>
         
         <p id="changingInstructions">
-            Heyyyyy
+            Here are where your instructions will appear!
         </p>
-        <!-- Instructions go here-->
 
     </div>
-
-    <h1 id="id01">This is an OLD HEADING.</h1>
-
 
 </body>
 </html>
