deleted react stuff, made changes to timer.js

--- a/timer/timer.html
+++ b/timer/timer.html
@@ -16,7 +16,7 @@
     <h1>Rushed-for-Thyme: A Cooking Helper
     </h1>
 
-    <div id="startTimerButton">
+    <div id="timerCountdown">
 
         <h3>How much time do you have left?</h3>
         <span id="time">20:00</span>
