added a bit of css, then deleted it, added all instructions for the timer into data.js and into the main file

--- a/home.html
+++ b/home.html
@@ -2,35 +2,90 @@
 <html>
 
 <head>
-    <!-- <link rel="stylesheet" href="./main.css"> -->
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 </head>
 
 <body>
 
-<title>
-    Rushed for Thyme - Countdown Timer
-</title>
+    <title>
+        Rushed for Thyme - Countdown Timer
+    </title>
 
-<h1>Ready to start?</h1>
-<h2>Here are your ingredients:</h2>
-<ul>
-    <li>
-        Ingredient 2
-    </li>
-    <li>
-        Ingredient 2
-    </li>
-    <li>
-        Ingredient 3
-    </li>
-    <li>
-        Ingredient 4
-    </li>
-</ul>
+    <h1>Rushed For Thyme - The Most Basic Cooking Timer For A Single Recipe.</h1>
+    <h2>Heres's what you will need:</h2>
 
-// Link to the thing
+    <h3>Ingredients:</h3>
 
-<a href="./timer/timer.html">Start the timer.</a>
+    <ul>
+        <li>
+            2 cups white rice - pre-cooked and refrigerated.
+        </li>
+        <li>
+            2 cups diced carrots
+        </li>
+        <li>
+            4 cups of boiling water
+        </li>
+        <li>
+            1/2 cup frozen peas (thawed)
+        </li>
+        <li>
+            2 tablespoons vegetable oil
+        </li>
+        <li>
+            2 eggs - mixed in a seperate bowl
+        </li>
+    </ul>
+
+    <h3> Cooking equipment and condiments:</h3>
+    <ul>
+        <li>
+            1 large wok / skillet
+        </li>
+        <li>
+            1 basic cooking pot
+        </li>
+        <li>
+            Bottle of soy sauce
+        </li>
+        <li>
+            Bottle of sesame oil
+        </li>
+        <li>
+            Bottle of chili oil (the good stuff)
+        </li>
+    </ul>
+
+    <h3>
+        Approx. nutritional value:
+    </h3>
+    <ul> 
+         <li>
+            281 calories
+        </li>
+         <li>
+            8.4 grams of fat
+        </li>
+         <li>
+            39.7 grams of carbohydrates
+        </li>
+         <li>
+            5.8 grams of protein
+        </li>
+        <li>
+            46 miligrams of cholesterol 
+        </li>
+        <li>
+            381 miligrams of sodium
+        </li>
+    </ul>
+
+    <h2>
+    <a href="./timer/timer.html"> Ready to start the timer?</a>
+    </h2>
 
 </body>
+
 </html>
