--- a/timer/timer.html
+++ b/timer/timer.html
@@ -3,7 +3,8 @@
 
 <head>
     <script type="text/javascript" src="./timer.js"></script>
-    <!-- <link rel="stylesheet" href="./main.css"> -->
+    <link rel="stylesheet" href="./main.css">
+    
 </head>
 
     <title>
@@ -30,7 +31,7 @@
         <h4>Here's what you have to do:</h4>
         
         <p id="changingInstructions">
-            Here are where your instructions will appear!
+            Your instructions are...
         </p>
 
     </div>
