added CSS, fonts, etc - timer works, added grid, added padding and colors

--- a/home.html
+++ b/home.html
@@ -3,88 +3,112 @@
 
 <head>
     <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Sacramento" rel="stylesheet">
+
+    <title>
+        Rushed for Thyme
+    </title>
 </head>
 
 <body>
+    <header>
+        <h1>
+            Rushed For Thyme
+        </h1>
+    </header>
 
-    <title>
-        Rushed for Thyme - Countdown Timer
-    </title>
+    <subheader>
 
-    <h1>Rushed For Thyme - The Most Basic Cooking Timer For A Single Recipe.</h1>
-    <h2>Heres's what you will need:</h2>
+        <h2>The most basic cooking timer with step by step instructions.</h2>
 
-    <h3>Ingredients:</h3>
+        <h3>Before you get started, here's what you'll need.</h3>
 
-    <ul>
-        <li>
-            2 cups white rice - pre-cooked and refrigerated.
-        </li>
-        <li>
-            2 cups diced carrots
-        </li>
-        <li>
-            4 cups of boiling water
-        </li>
-        <li>
-            1/2 cup frozen peas (thawed)
-        </li>
-        <li>
-            2 tablespoons vegetable oil
-        </li>
-        <li>
-            2 eggs - mixed in a seperate bowl
-        </li>
-    </ul>
+    </subheader>
 
-    <h3> Cooking equipment and condiments:</h3>
-    <ul>
-        <li>
-            1 large wok / skillet
-        </li>
-        <li>
-            1 basic cooking pot
-        </li>
-        <li>
-            Bottle of soy sauce
-        </li>
-        <li>
-            Bottle of sesame oil
-        </li>
-        <li>
-            Bottle of chili oil (the good stuff)
-        </li>
-    </ul>
+    <main class="maincontainer">
 
-    <h3>
-        Approx. nutritional value:
-    </h3>
-    <ul> 
-         <li>
-            281 calories
-        </li>
-         <li>
-            8.4 grams of fat
-        </li>
-         <li>
-            39.7 grams of carbohydrates
-        </li>
-         <li>
-            5.8 grams of protein
-        </li>
-        <li>
-            46 miligrams of cholesterol 
-        </li>
-        <li>
-            381 miligrams of sodium
-        </li>
-    </ul>
+        <div class="ingredients">
+            <h3>Ingredients:</h3>
 
-    <h2>
-    <a href="./timer/timer.html"> Ready to start the timer?</a>
-    </h2>
+            <ul>
+                <li>
+                    2 cups white rice - pre-cooked and refrigerated.
+                </li>
+                <li>
+                    2 cups diced carrots
+                </li>
+                <li>
+                    4 cups of boiling water
+                </li>
+                <li>
+                    1/2 cup frozen peas (thawed)
+                </li>
+                <li>
+                    2 tablespoons vegetable oil
+                </li>
+                <li>
+                    2 eggs - mixed in a seperate bowl
+                </li>
+            </ul>
+
+        </div>
+
+        <div class="equipment-condiments">
+
+            <h3> Cooking equipment and condiments:</h3>
+            <ul>
+                <li>
+                    1 large wok / skillet
+                </li>
+                <li>
+                    1 basic cooking pot
+                </li>
+                <li>
+                    Bottle of soy sauce
+                </li>
+                <li>
+                    Bottle of sesame oil
+                </li>
+                <li>
+                    Bottle of chili oil (the good stuff)
+                </li>
+            </ul>
+        </div>
+
+        <div class="nutrition">
+            <h3>
+                Approx. nutritional value:
+            </h3>
+            <ul>
+                <li>
+                    281 calories
+                </li>
+                <li>
+                    8.4 grams of fat
+                </li>
+                <li>
+                    39.7 grams of carbohydrates
+                </li>
+                <li>
+                    5.8 grams of protein
+                </li>
+                <li>
+                    46 miligrams of cholesterol
+                </li>
+                <li>
+                    381 miligrams of sodium
+                </li>
+            </ul>
+        </div>
+
+    </main>
+
+    <div class="timer-link">
+        <h2>
+            <a href="./timer/timer.html"> Ready to start the timer?</a>
+        </h2>
+
+    </div>
 
 </body>
 
